# internal/model/dto/request/update_credit_request_due_date.go
@@ -1,0 +1,7 @@
+package request
+
+import "time"
+
+type UpdateCreditRequestDueDate struct {
+    DueDate time.Time `json:"due_date" binding:"required"`
+}
